<resources>
    <string name="app_name">AgendaContacto</string>
    <string name="lblNome">Nome</string>
    <string name="lblTelefone">Telefone</string>
    <string name="lblEmail">Email</string>
    <string name="lblEndereco">Endereco</string>
    <string name="lblDatasEspeciais">Datas Especiais</string>
    <string name="lblGrupos">Grupos</string>

    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_alterar">Alterar</string>
    <string name="lbl_excluir">Excluir</string>

</resources>
